# PlainTextToVTK

./: .gitignore  CMakeLists.txt
src/: main.c
src/file_utils/: CMakeLists.txt  file_utils.c  file_utils.h
src/hash/: CMakeLists.txt  point_hash.c  point_hash.h
src/vtk_utils/: CMakeLists.txt  data_utils.c  data_utils.h  vtk_unstructured_grid.c  vtk_unstructured_grid.h
